src/monero_api.h


    typedef struct ErrorBox
    {
        int code;
        const char *message;
    } ErrorBox;


    typedef struct ExternPendingTransactionRaw
    {
        int64_t amount;
        int64_t fee;
        const char *hex;
        const char *hash;
        const char *tx_key;
        const char *multisig_sign_data;
        int64_t monero_transaction_handle;
    } ExternPendingTransactionRaw;

    const char *sign_multisig_tx_hex(const char *multisig_tx_hex, ErrorBox *error);

    const char *const *submit_multisig_tx_hex(const char *signed_multisig_tx_hex, ErrorBox *error);