lib/monero_api_bindings_generated.dart


  late final _sign_multisig_tx_hexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ErrorBox>)>>('sign_multisig_tx_hex');
  late final _sign_multisig_tx_hex = _sign_multisig_tx_hexPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>();

  ffi.Pointer<ffi.Pointer<ffi.Char>> submit_multisig_tx_hex(
    ffi.Pointer<ffi.Char> signed_multisig_tx_hex,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _submit_multisig_tx_hex(
      signed_multisig_tx_hex,
      error,
    );
  }

  late final _submit_multisig_tx_hexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Pointer<ffi.Char>> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ErrorBox>)>>('submit_multisig_tx_hex');
  late final _submit_multisig_tx_hex = _submit_multisig_tx_hexPtr.asFunction<
      ffi.Pointer<ffi.Pointer<ffi.Char>> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>();
}

class ErrorBox extends ffi.Struct {
  @ffi.Int()
  external int code;

  external ffi.Pointer<ffi.Char> message;
}

class ExternPendingTransactionRaw extends ffi.Struct {
  @ffi.Int64()
  external int amount;

  @ffi.Int64()
  external int fee;

  external ffi.Pointer<ffi.Char> hex;

  external ffi.Pointer<ffi.Char> hash;

  external ffi.Pointer<ffi.Char> tx_key;

  external ffi.Pointer<ffi.Char> multisig_sign_data;

  @ffi.Int64()
  external int monero_transaction_handle;
}
